refactor(prometheus): use docker to test

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -288,13 +288,9 @@ jobs:
           access_token: ${{ github.token }}
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Install Prometheus
-        run: |
-          sudo apt-get install prometheus
       - name: Test
-        working-directory: docker/prometheus
         run: |
-          promtool test rules alerting-rules.test.yml
+          docker build --file Dockerfile.prometheus.test .
 
   cypress:
     name: Cypress
