feat(app): add flake8

--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ name = "pypi"
 
 [dev-packages]
 black = "==20.8b1"
+flake8 = "==3.9.0"
 
 [requires]
 python_version = "3.9"
@@ -14,3 +15,4 @@ python_version = "3.9"
 [scripts]
 lint-py = "black --check ."
 lint-fix-py = "black ."
+flake8 = "flake8 ."
