--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,6 @@ flake8 = "==3.9.0"
 python_version = "3.9"
 
 [scripts]
-lint-py = "black --check ."
-lint-fix-py = "black ."
-flake8 = "flake8 ."
+lint-py-black = "black --check ."
+lint-py-black-fix = "black ."
+lint-py-flake8 = "flake8 ."
