feat(app): add isort

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -85,6 +85,9 @@ jobs:
       - name: Lint Python (Flake8)
         run: |
           pipenv run lint-py-flake8
+      - name: Lint Python (isort)
+        run: |
+          pipenv run lint-py-isort
 
   web-test:
     name: Web - Test
