--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ python_version = "3.9"
 black = "==20.8b1"
 flake8 = "==3.9.0"
 isort = "==5.8.0"
+mypy = "==0.812"
 
 [scripts]
 lint-py-black = "black . --check"
@@ -19,3 +20,4 @@ lint-py-black-fix = "black ."
 lint-py-flake8 = "flake8 ."
 lint-py-isort = "isort . --skip-gitignore --check-only"
 lint-py-isort-fix = "isort . --skip-gitignore"
+mypy = "mypy ."
