perf(ci): clean cypress docker compose file

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -393,7 +393,7 @@ jobs:
       - name: Build and run containers
         run: |
           cp docker/postgres/.env.development.local.example docker/postgres/.env.development.local
-          docker-compose --file docker-compose.ci.yml up --detach
+          docker-compose --file docker-compose.cypress.yml up --detach
       - name: Cypress
         run: |
           cd cypress && npm run test:cypress:headless:5000
