--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,7 +23,7 @@ jobs:
         id: npm-cache-dir
         run: |
           echo "::set-output name=dir::$(npm config get cache)"
-      - name: Cache
+      - name: Cache npm
         uses: actions/cache@v2
         id: npm-cache
         with:
@@ -69,7 +69,7 @@ jobs:
       - name: Install pipenv
         run: |
           pip install pipenv
-      - name: Cache
+      - name: Cache pipenv
         uses: actions/cache@v2
         with:
           path: ~/.local/share/virtualenvs
@@ -106,7 +106,7 @@ jobs:
       - name: Install pipenv
         run: |
           pip install pipenv
-      - name: Cache
+      - name: Cache pipenv
         uses: actions/cache@v2
         with:
           path: ~/.local/share/virtualenvs
@@ -138,7 +138,7 @@ jobs:
         id: npm-cache-dir
         run: |
           echo "::set-output name=dir::$(npm config get cache)"
-      - name: Cache
+      - name: Cache npm
         uses: actions/cache@v2
         id: npm-cache
         with:
@@ -173,7 +173,7 @@ jobs:
         id: npm-cache-dir
         run: |
           echo "::set-output name=dir::$(npm config get cache)"
-      - name: Cache
+      - name: Cache npm
         uses: actions/cache@v2
         id: npm-cache
         with:
@@ -217,7 +217,7 @@ jobs:
         id: npm-cache-dir
         run: |
           echo "::set-output name=dir::$(npm config get cache)"
-      - name: Cache
+      - name: Cache npm
         uses: actions/cache@v2
         id: npm-cache
         with:
@@ -257,7 +257,7 @@ jobs:
         id: npm-cache-dir
         run: |
           echo "::set-output name=dir::$(npm config get cache)"
-      - name: Cache
+      - name: Cache npm
         uses: actions/cache@v2
         id: npm-cache
         with:
@@ -292,7 +292,7 @@ jobs:
         id: npm-cache-dir
         run: |
           echo "::set-output name=dir::$(npm config get cache)"
-      - name: Cache
+      - name: Cache npm
         uses: actions/cache@v2
         id: npm-cache
         with:
@@ -327,7 +327,7 @@ jobs:
         id: npm-cache-dir
         run: |
           echo "::set-output name=dir::$(npm config get cache)"
-      - name: Cache
+      - name: Cache npm
         uses: actions/cache@v2
         id: npm-cache
         with:
@@ -378,7 +378,7 @@ jobs:
         id: npm-cache-dir
         run: |
           echo "::set-output name=dir::$(npm config get cache)"
-      - name: Cache
+      - name: Cache npm
         uses: actions/cache@v2
         id: npm-cache
         with:
@@ -390,9 +390,15 @@ jobs:
         run: |
           npm ci
           cd cypress && npm ci
-      - name: Build and run containers
+      - name: Pull Docker images
         run: |
           cp docker/postgres/.env.development.local.example docker/postgres/.env.development.local
+          docker-compose --file docker-compose.cypress.yml pull
+      - name: Cache Docker images
+        uses: satackey/action-docker-layer-caching@v0.0.11
+        continue-on-error: true
+      - name: Build and run containers
+        run: |
           docker-compose --file docker-compose.cypress.yml up --detach
       - name: Cypress
         run: |
@@ -416,7 +422,7 @@ jobs:
         id: npm-cache-dir
         run: |
           echo "::set-output name=dir::$(npm config get cache)"
-      - name: Cache
+      - name: Cache npm
         uses: actions/cache@v2
         id: npm-cache
         with:
