chore(docker): ignore folders

--- a/.dockerignore
+++ b/.dockerignore
@@ -35,6 +35,17 @@ web/public/sitemap.xml
 web/storybook-static
 web/tmp
 
+
 # .dockerignore specific
 **/.env.development.local
 **/.env.production.local
+
+/.github
+/.husky
+/bin
+/cypress
+/ethereum
+/kubernetes
+/locust
+/mobile
+/neural-network
