--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -388,7 +388,6 @@ jobs:
             ${{ runner.os }}-node-
       - name: Install dependencies
         run: |
-          npm ci
           cd cypress && npm ci
       - name: Pull Docker images
         run: |
@@ -399,6 +398,7 @@ jobs:
         continue-on-error: true
       - name: Build and run containers
         run: |
+          cp docker/postgres/.env.development.local.example docker/postgres/.env.development.local
           docker-compose --file docker-compose.cypress.yml up --detach
       - name: Cypress
         run: |
