--- a/Dockerfile.api.development
+++ b/Dockerfile.api.development
@@ -1,15 +1,11 @@
-FROM node:15.13.0-alpine
-WORKDIR /app
+FROM node:15.13.0-alpine AS base
+WORKDIR /usr/src/app
 
-# Install dependencies
-COPY ["package.json", "package-lock.json", "./"]
+
+FROM base AS web
 COPY ["web/package.json", "web/package-lock.json", "./web/"]
-COPY ["api/package.json", "api/package-lock.json", "./api/"]
-RUN npm ci
 RUN cd web && npm ci
-RUN cd api && npm ci
 
-# Build web
 # https://create-react-app.dev/docs/adding-custom-environment-variables/
 # In create-react-app, when you run 'npm run build' to make a production bundle, it is always equal to 'production'.
 # So using REACT_APP_SERVER_WS_PROTOCOL=ws in .env.production.local.example
@@ -18,12 +14,16 @@ COPY web web
 # Skip lint check during react-scripts build
 RUN rm -f web/.eslintrc.js
 RUN cd web && REACT_APP_LIGHTSTEP_TOKEN="$REACT_APP_LIGHTSTEP_TOKEN" npm run build
+RUN npm prune --production
 
-# Build API Server
+
+FROM base AS api
+COPY ["api/package.json", "api/package-lock.json", "./api/"]
+RUN cd api && npm ci
+COPY --from=web /usr/src/app/web/build ./api/dist
 COPY api api
-RUN cp -r web/build/ api/dist/
-
 COPY api/.env.development.local.example.docker api/.env.development.local
 
+WORKDIR /usr/src/app/api
 EXPOSE 5000
 CMD ["npm", "run", "dev"]
