--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -25,8 +25,8 @@ services:
     environment:
       - NODE_ENV=development
     volumes:
-      - "./api:/app/api"
-      - "/app/api/node_modules"
+      - "./api:/usr/src/app/api"
+      - "/usr/src/app/api/node_modules"
     logging:
       driver: fluentd
       options:
