--- a/ethereum/package.json
+++ b/ethereum/package.json
@@ -5,7 +5,7 @@
     "node": "15.x"
   },
   "scripts": {
-    "build": "tsc && babel build --out-dir build && copyfiles -u 1 src/**/*.sol build"
+    "build": "tsc && babel src --out-dir build --extensions .ts --copy-files"
   },
   "dependencies": {
     "solc": "0.8.3"
@@ -14,7 +14,6 @@
     "@babel/cli": "7.13.14",
     "@babel/core": "7.13.14",
     "@babel/preset-env": "7.13.12",
-    "@babel/preset-typescript": "7.13.0",
-    "copyfiles": "2.4.1"
+    "@babel/preset-typescript": "7.13.0"
   }
 }
