chore(npm): set npm version requirement

--- a/api/package.json
+++ b/api/package.json
@@ -3,7 +3,8 @@
   "main": "index.js",
   "private": true,
   "engines": {
-    "node": "15.x"
+    "node": "15.x",
+    "npm": "7.x"
   },
   "scripts": {
     "build": "tsc && babel src --out-dir build/src --extensions .ts",
