--- a/cypress/package.json
+++ b/cypress/package.json
@@ -2,7 +2,8 @@
   "name": "cypress",
   "private": true,
   "engines": {
-    "node": "15.x"
+    "node": "15.x",
+    "npm": "7.x"
   },
   "scripts": {
     "test:cypress:gui:8080": "cypress open --config-file cypress.8080.json",
