--- a/ethereum/package.json
+++ b/ethereum/package.json
@@ -2,7 +2,8 @@
   "name": "ethereum",
   "private": true,
   "engines": {
-    "node": "15.x"
+    "node": "15.x",
+    "npm": "7.x"
   },
   "scripts": {
     "build": "tsc && babel src --out-dir build --extensions .ts --copy-files"
