--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "private": true,
   "engines": {
-    "node": "15.x"
+    "node": "15.x",
+    "npm": "7.x"
   },
   "scripts": {
     "commit": "commit",
