--- a/web/package.json
+++ b/web/package.json
@@ -2,7 +2,8 @@
   "name": "web",
   "private": true,
   "engines": {
-    "node": "15.x"
+    "node": "15.x",
+    "npm": "7.x"
   },
   "scripts": {
     "dev": "react-scripts start",
