--- a/api/package.json
+++ b/api/package.json
@@ -87,6 +87,7 @@
     "@babel/preset-typescript": "7.13.0",
     "@stryker-mutator/core": "4.5.1",
     "@stryker-mutator/jest-runner": "4.5.1",
+    "@stryker-mutator/typescript-checker": "4.5.1",
     "@types/autocannon": "4.1.0",
     "@types/bcrypt": "3.0.0",
     "@types/connect-timeout": "0.0.34",
