feat(app): init gin

--- a/.editorconfig
+++ b/.editorconfig
@@ -10,6 +10,10 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 
+[{go.mod,*.go}]
+indent_size = 4
+indent_style = tab
+
 [*.py]
 indent_size = 4
 
