--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ api/tmp
 cypress/cypress/fixtures/example.json
 cypress/cypress/screenshots
 ethereum/build
+gin/public
 mobile/.expo
 mobile/coverage
 mobile/tmp
