refactor(app): rename dist to public folder

--- a/.dockerignore
+++ b/.dockerignore
@@ -16,7 +16,7 @@ api/.clinic
 api/.stryker-tmp
 api/build
 api/coverage
-api/dist
+api/public
 api/reports
 api/tmp
 cypress/cypress/fixtures/example.json
