--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        language: [ 'javascript', 'python' ]
+        language: [ 'go', 'javascript', 'python' ]
     steps:
       - name: Cancel previous runs
         uses: styfle/cancel-workflow-action@0.8.0
