--- a/.mergify.yml
+++ b/.mergify.yml
@@ -518,9 +518,6 @@ pull_request_rules:
           - check-success=Test Machine Learning / cuML | Test
           - check-skipped=Test Machine Learning / cuML | Test
       - or:
-          - check-success=Test Machine Learning / Hugging Face (analyze-sentiment) | Test
-          - check-skipped=Test Machine Learning / Hugging Face (analyze-sentiment) | Test
-      - or:
           - check-success=Test Machine Learning / Gradio (classify-image) | Test
           - check-skipped=Test Machine Learning / Gradio (classify-image) | Test
       - or:
@@ -598,6 +595,9 @@ pull_request_rules:
       - or:
           - check-success=Test Machine Learning / Speculative Decoding | Test
           - check-skipped=Test Machine Learning / Speculative Decoding | Test
+      - or:
+          - check-success=Test Machine Learning / Analyze Sentiment | Test
+          - check-skipped=Test Machine Learning / Analyze Sentiment | Test
       - or:
           - check-success=Test Machine Learning / Kubeflow (calculate) | Test
           - check-skipped=Test Machine Learning / Kubeflow (calculate) | Test
