--- a/.github/workflows/.static-type-check.yml
+++ b/.github/workflows/.static-type-check.yml
@@ -91,6 +91,7 @@ jobs:
           uv run poe static-type-check-python --package=aerospace.x-plane.udp
           uv run poe static-type-check-python --package=api.api-python
           uv run poe static-type-check-python --package=api.api-rust.scripts
+          uv run poe static-type-check-python --package=audio.audio-signal-analysis.hm-librosa
           uv run poe static-type-check-python --package=audio.automatic-speech-recognition.hm-faster-whisper
           uv run poe static-type-check-python --package=audio.automatic-speech-recognition.hm-speaches
           uv run poe static-type-check-python --package=audio.automatic-speech-recognition.hm-whisperx
