--- a/.mergify.yml
+++ b/.mergify.yml
@@ -647,6 +647,9 @@ pull_request_rules:
           - check-success=Test Machine Learning / Diart | Test
           - check-skipped=Test Machine Learning / Diart | Test
       - or:
+          - check-success=Test Machine Learning / Librosa | Test
+          - check-skipped=Test Machine Learning / Librosa | Test
+      - or:
           - check-success=Test Machine Learning / Faster Whisper | Test
           - check-skipped=Test Machine Learning / Faster Whisper | Test
       - or:
