--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1095,6 +1095,7 @@ jobs:
       hm-networkx: ${{ needs.detect-changes.outputs.hm-networkx == 'true' }}
       hm-numba: ${{ needs.detect-changes.outputs.hm-numba == 'true' }}
       hm-pandas-analyze-transactions: ${{ needs.detect-changes.outputs.hm-pandas-analyze-transactions == 'true' }}
+      hm-polars-analyze-transactions-cpu: ${{ needs.detect-changes.outputs.hm-polars-analyze-transactions-cpu == 'true' }}
       hm-polars-analyze-transactions-gpu: ${{ needs.detect-changes.outputs.hm-polars-analyze-transactions-gpu == 'true' }}
 
   test-data-visualization:
