--- a/video/media-streaming-server/mediamtx/justfile
+++ b/video/media-streaming-server/mediamtx/justfile
@@ -1,7 +1,6 @@
 run:
     docker run --rm --interactive --tty \
-        --env=MTX_RTSPTRANSPORTS=tcp \
-        --env=MTX_WEBRTCADDITIONALHOSTS=192.168.x.x \
+        --volume="$(pwd)/mediamtx.yml:/mediamtx.yml" \
         --publish=8554:8554 \
         --publish=1935:1935 \
         --publish=8888:8888 \
@@ -12,12 +11,12 @@ run:
 
 publish:
     gst-launch-1.0 \
-        filesrc location=data/video.mp4 ! \
+        filesrc location=data/video-1.mp4 ! \
         qtdemux name=d \
         d.video_0 ! \
         queue ! \
         h264parse ! \
-        rtspclientsink location=rtsp://localhost:8554/video protocols=tcp
+        rtspclientsink location=rtsp://localhost:8554/video-1 protocols=tcp
 
 subscribe:
-    gst-play-1.0 rtsp://localhost:8554/video
+    gst-play-1.0 rtsp://localhost:8554/video-1
