feat(data-processing): add cocoindex

--- a/.github/workflows/.static-type-check.yml
+++ b/.github/workflows/.static-type-check.yml
@@ -130,6 +130,7 @@ jobs:
           uv run poe static-type-check-python --package=data-orchestration.hm-prefect.workflows.daft-analysis
           uv run poe static-type-check-python --package=data-orchestration.hm-prefect.workflows.greet
           uv run poe static-type-check-python --package=data-orchestration.hm-prefect.workflows.print-platform
+          uv run poe static-type-check-python --package=data-processing.hm-cocoindex.flows.embed-markdown-to-postgres
           uv run poe static-type-check-python --package=data-processing.hm-pathway.pipelines.aggregate-hourly-events
           uv run poe static-type-check-python --package=data-processing.hm-spark.applications.analyze-coffee-customers
           uv run poe static-type-check-python --package=data-processing.hm-spark.applications.find-retired-people-python
