--- a/.mergify.yml
+++ b/.mergify.yml
@@ -296,6 +296,9 @@ pull_request_rules:
           - check-success=Test Data Processing / ingest-flac-to-parquet | Test
           - check-skipped=Test Data Processing / ingest-flac-to-parquet | Test
       - or:
+          - check-success=Test Data Processing / CocoIndex (embed-markdown-to-postgres) | Test
+          - check-skipped=Test Data Processing / CocoIndex (embed-markdown-to-postgres) | Test
+      - or:
           - check-success=Test Data Processing / Pathway (aggregate-hourly-events) | Test
           - check-skipped=Test Data Processing / Pathway (aggregate-hourly-events) | Test
       - or:
